--- a/public/stylesheets/get-histogram.css
+++ b/public/stylesheets/get-histogram.css
@@ -243,39 +243,12 @@
   font-weight: 500;
   margin: 18px
 }
-fieldset {
-  border: 0;
-}
-.drop-area {
-  border: 2px dashed #bbb;
-  border-radius: 5px;
-  padding: 25px;
-  text-align: center;
-  color: #bbb;
-  margin: 20px;
-}
-.thumbnail {
- max-width: 25%;
-}
-.button {
-  height: 28px;
-  width: 80px;
-  border-radius: 5px;
-  border: none;
-  margin: 5px;
-  border: 2px solid white;
-  font-size: 18px;
-  font-weight: 500;
-  cursor: pointer;
-  outline: none;
-  transition: all 0.3s ease;
-}
-.button:hover {
-  background: black;
-  color: white;
+img {
+  max-width: 100%;
+  height: auto;
 }
 @media (max-width: 420px) {
-  .sidebar li .tooltip{
+  .sidebar li .tooltip img{
     display: none;
   }
 }
