--- a/public/stylesheets/m-next.css
+++ b/public/stylesheets/m-next.css
@@ -244,38 +244,72 @@
   margin: 18px
 }
 fieldset {
-  border: 0;
+    border: 0;
 }
-.drop-area {
-  border: 2px dashed #bbb;
-  border-radius: 5px;
-  padding: 25px;
-  text-align: center;
-  color: #bbb;
-  margin: 20px;
-}
-.thumbnail {
- max-width: 25%;
-}
-.button {
-  height: 28px;
-  width: 80px;
-  border-radius: 5px;
-  border: none;
-  margin: 5px;
-  border: 2px solid white;
+.flex-container {
+  display: flex;
+  flex-wrap: wrap;
   font-size: 18px;
-  font-weight: 500;
-  cursor: pointer;
-  outline: none;
-  transition: all 0.3s ease;
+  text-align: left;
 }
-.button:hover {
-  background: black;
+.flex-item-1 {
+  background-color: #202020;
   color: white;
+  padding: 10px;
+  flex: 25%;
+}
+.flex-item-2 {
+  background-color: #202020;
+  color: white;
+  padding: 10px;
+  flex: 25%;
+}
+.flex-item-3 {
+  background-color: #202020;
+  color: white;
+  padding: 10px;
+  flex: 25%;
+}
+.flex-item-4 {
+  background-color: #202020;
+  color: white;
+  padding: 10px;
+  flex: 25%;
+}
+.demo-container {
+  width: 300px;
+  margin: auto;
+  visibility: hidden;
+}
+.progress-bar {
+ height: 4px;
+ background-color: rgba(5, 114, 206, 0.2);
+ width: 100%;
+ overflow: hidden;
+}
+.progress-bar-value {
+ width: 100%;
+ height: 100%;
+ background-color: rgb(5, 114, 206);
+ animation: indeterminateAnimation 1s infinite linear;
+ transform-origin: 0% 50%;
+}
+@keyframes indeterminateAnimation {
+ 0% {
+  transform:  translateX(0) scaleX(0);
+ }
+ 40% {
+  transform:  translateX(0) scaleX(0.4);
+ }
+ 100% {
+   transform:  translateX(100%) scaleX(0.5);
+ }
 }
 @media (max-width: 420px) {
   .sidebar li .tooltip{
     display: none;
+  }
+  .flex-container {
+    flex-direction: column;
   }
 }
