--- a/views/histogram.ejs
+++ b/views/histogram.ejs
@@ -3,8 +3,8 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="UTF-8">
-    <title>Automatic Process</title>
-    <link rel="stylesheet" href="../stylesheets/a-process.css">
+    <title>Histogram</title>
+    <link rel="stylesheet" href="../stylesheets/histogram.css">
     <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
    </head>
@@ -87,34 +87,32 @@
     </ul>
   </div>
   <section class="home-section">
-    <div class="text">Automatic Process</div>
+    <div class="text">Generate Histogram</div>
     <p>
     <div class="drop-area" id="drop">
-        <form action="/a-process/a-next" method="POST">
+        <form action="/histogram/generate" method="POST">
             <br>
-            <p>Please select the album to process:</p>
+            <p>Please select the photo:</p>
             <fieldset>
-                <select name="chooseAlbum" id="choosetAlbum">
-                    <% if(folders){ %>
-                        <% for(var folder of folders) { %>
-                            <option value="<%=folder%>"><%=folder%></option>
+                <select name="photo" id="photo">
+                    <% if(images){ %>
+                        <% for(var image of images) { %>
+                            <option value="<%=image%>"><%=image%></option>
                         <% } %>
                     <% }else { %>
-                        <p class="card card-body text-center display-4 my-4" style="color:aliceblue">No album</p>
+                        <p class="card card-body text-center display-4 my-4" style="color:aliceblue">No images</p>
                     <% } %>
                 </select>
             </fieldset>
             <br>
-            <p>Please select the astronomical object photographed:</p>
+            <p>Please select the type of Histogram:</p>
             <fieldset>
-                <select name="category" id="category">
-                    <option value="star_clusters">Star Clusters</option>
-                    <option value="nebulae">Nebulae</option>
-                    <option value="galaxies">Galaxies</option>
-                    <option value="comet">Comet</option>
-                    <option value="planet">Planet</option>
-                    <option value="moon">Moon</option>
-                    <option value="star">Star</option>
+                <select name="type" id="type">
+                    <option value="1">Grayscale Histogram</option>
+                    <option value="2">Color Histogram</option>
+                    <option value="3">Normalized Grayscale Histogram</option>
+                    <option value="4">Normalized Color Histogram</option>
+                    <option value="5">2D Color Histogram</option>
                 </select>
             </fieldset> 
             <br>
