--- a/views/m-process.ejs
+++ b/views/m-process.ejs
@@ -3,7 +3,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="UTF-8">
-    <title> Manual Process </title>
+    <title>Manual Process</title>
     <link rel="stylesheet" href="../stylesheets/m-process.css">
     <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -57,6 +57,20 @@
       </a>
       <span class="tooltip">Manual Process</span>
      </li>
+     <li>
+      <a href="/histogram">
+        <i class='bx bx-line-chart-down'></i>
+        <span class="links_name">Histogram</span>
+      </a>
+      <span class="tooltip">Histogram</span>
+     </li>
+     <li>
+      <a href="/paint">
+        <i class='bx bx-paint'></i>
+        <span class="links_name">Edit Image</span>
+      </a>
+      <span class="tooltip">Edit Image</span>
+     </li>
      <li class="profile">
          <div class="profile-details">
             <div class="name_job">
@@ -75,337 +89,42 @@
   <section class="home-section">
     <div class="text">Manual Process</div>
     <p>
-      <form action="/m-process/m-exec" method="POST">
-        <div class="flex-container">
-          <div class="flex-item-1">
-            <p>Use a Base Frame:</p>
-            <fieldset id="baseFrame">
-              <input type="radio" value="True" name="baseFrame">
-              <label for="baseFrame">True</label>
-              <input type="radio" value="False" name="baseFrame" checked>
-              <label for="baseFrame">False</label>
-              <input type="text" id="baseName" name="baseName" value="null" placeholder="Photo Name">
-            </fieldset>
+    <div class="drop-area" id="drop">
+        <form action="/m-process/m-next" method="POST">
             <br>
-            <p>Align the images using a homography:</p>
-            <fieldset id="align">
-              <input type="radio" value="True" name="align" checked>
-              <label for="align">True</label>
-              <input type="radio" value="False" name="align">
-              <label for="align">False</label>
-            </fieldset>
-            <br>
-            <p>Cache the keypoints in the base frame:</p>
-            <fieldset id="cache">
-              <input type="radio" value="True" name="cache" checked>
-              <label for="cache">True</label>
-              <input type="radio" value="False" name="cache">
-              <label for="cache">False</label>
-            </fieldset>
-            <br>
-            <p>Don't demosaic. Keep as raw Bayer mosaic:</p>
-            <fieldset id="raw">
-              <input type="radio" value="True" name="raw">
-              <label for="raw">True</label>
-              <input type="radio" value="False" name="raw" checked>
-              <label for="raw">False</label>
-            </fieldset>
-            <br>
-            <p>Crop to the visible window:</p>
-            <fieldset id="crop">
-              <input type="radio" value="True" name="crop" checked>
-              <label for="crop">True</label>
-              <input type="radio" value="False" name="crop">
-              <label for="crop">False</label>
-            </fieldset>
-            <br>
-            <p>Add black padding (in fraction of width,height) around the image:</p>
-            <fieldset id="padd">
-              <input type="text" name="padd" value="0.0" placeholder="0.0" class="mytext">
-            </fieldset>
-            <br>
-            <p> Align using images thresholded at the percentile:</p>
-            <fieldset id="thr">
-              <input type="text" name="thr" value="0.85" placeholder="0.85" class="mytext">
-            </fieldset>
-            <br>
-            <p>Use a Dark Frame:</p>
-            <fieldset id="darkFrame">
-              <input type="radio" value="True" name="darkFrame">
-              <label for="darkFrame">True</label>
-              <input type="radio" value="False" name=darkFrame checked>
-              <label for="darkFrame">False</label>
-              <input type="text" id="darkName" name="darkName" value="null" placeholder="Dark Frame Name">
-            </fieldset>
-            <br>
-            <p>Use a Flat Frame:</p>
-            <fieldset id="flatFrame">
-              <input type="radio" value="True" name="flatFrame">
-              <label for="flatFrame">True</label>
-              <input type="radio" value="False" name="flatFrame" checked>
-              <label for="flatFrame">False</label>
-              <input type="text" id="flatName" name="flatName" value="null" placeholder="Flat Frame Name">
-            </fieldset>
-            <br>
-            <p>Use a Mask Frame:</p>
-            <fieldset id="maskFrame">
-              <input type="radio" value="True" name="maskFrame">
-              <label for="maskFrame">True</label>
-              <input type="radio" value="False" name="maskFrame" checked>
-              <label for="maskFrame">False</label>
-              <input type="text" id="maskName" name="maskName" value="null" placeholder="Mask Frame Name">
-            </fieldset>
-          </div>
-          <div class="flex-item-2">
-            <p>Output Name:</p>
-            <fieldset id="outputName">
-              <input type="text" name="outputName" value="My-Processed-Photo" placeholder="My-Processed-Photo">
-            </fieldset>
-            <br>
-            <p>Image Format</p>
+            <p>Please select the album to process:</p>
             <fieldset>
-              <select name="imageFormat" id="imageFormat">
-                <option value=".tiff" selected>TIFF</option>
-                <option value=".jpg">JPG</option>
-                <option value=".png" >PNG</option>
-              </select>
+                <select name="chooseAlbum" id="choosetAlbum">
+                    <% if(folders){ %>
+                        <% for(var folder of folders) { %>
+                            <option value="<%=folder%>"><%=folder%></option>
+                        <% } %>
+                    <% }else { %>
+                        <p class="card card-body text-center display-4 my-4" style="color:aliceblue">No album</p>
+                    <% } %>
+                </select>
             </fieldset>
-            <br> 
-            <p>Gamma</p>
+            <br>
+            <p>Please select the astronomical object photographed:</p>
             <fieldset>
-              <select name="gamma" id="gamma">
-                <option value="linear" selected>Linear</option>
-                <option value="sRGB">sRGB</option>
-              </select>
+                <select name="category" id="category">
+                    <option value="star_clusters">Star Clusters</option>
+                    <option value="nebulae">Nebulae</option>
+                    <option value="galaxies">Galaxies</option>
+                    <option value="comet">Comet</option>
+                    <option value="planet">Planet</option>
+                    <option value="moon">Moon</option>
+                    <option value="star">Star</option>
+                </select>
             </fieldset> 
             <br>
-            <p>No Auto Scale:</p>
-            <fieldset id="noAutoScale">
-              <input type="radio" value="True" name="noAutoScale">
-              <label for="noAutoScale">True</label>
-              <input type="radio" value="False" name="noAutoScale" checked>
-              <label for="noAutoScale">False</label>
-            </fieldset>
-            <br>
-            <p>No Auto Bright</p>
-            <fieldset id="noAutoBright">
-              <input type="radio" value="True" name="noAutoBright" checked>
-              <label for="noAutoBright">True</label>
-              <input type="radio" value="False" name="noAutoBright">
-              <label for="noAutoBright">False</label>
-            </fieldset>
-            <br>
-            <p>Output bps</p>
-            <fieldset id="outputBPS">
-              <input type="radio" value="8" name="outputBPS">
-              <label for="outputBPS">8</label>
-              <input type="radio" value="16" name="outputBPS" checked>
-              <label for="outputBPS">16</label>
-            </fieldset>
-            <br>
-            <p>No Auto Bright</p>
-            <fieldset id="noAutoBright">
-              <input type="radio" value="True" name="noAutoBright" checked>
-              <label for="noAutoBright">True</label>
-              <input type="radio" value="False" name="noAutoBright">
-              <label for="noAutoBright">False</label>
-            </fieldset>
-            <br>
-            <p>Use Camera White Balance</p>
-            <fieldset id="cameraWB">
-              <input type="radio" value="True" name="cameraWB">
-              <label for="cameraWB">True</label>
-              <input type="radio" value="False" name="cameraWB" checked>
-              <label for="cameraWB">False</label>
-            </fieldset>
-            <br>
-            <p>Use Auto White Balance</p>
-            <fieldset id="autoWB">
-              <input type="radio" value="True" name="autoWB">
-              <label for="autoWB">True</label>
-              <input type="radio" value="False" name="autoWB" checked>
-              <label for="autoWB">False</label>
-            </fieldset>
-            <br>
-            <p>Color Space</p>
-            <fieldset>
-              <select name="colorSpace" id="colorSpace">
-                <option value="2">Adobe</option>
-                <option value="4">ProPhoto</option>
-                <option value="3">Wide</option>
-                <option value="5">XYZ</option>
-                <option value="0">raw</option>
-                <option value="1" selected>sRGB</option>
-              </select>
-            </fieldset> 
-          </div>
-          <div class="flex-item-3">
-            <p>Demosaic Algorithm</p>
-            <fieldset>
-              <select name="demosaicAlgorithm" id="demosaicAlgorithm">
-                <option value="12">AAHD</option>
-                <option value="6">AFD</option>
-                <option selected value="3">AHD</option>
-                <option value="10">AMAZE</option>
-                <option value="4">DCB</option>
-                <option value="11">DHT</option>
-                <option value="0">LINEAR</option>
-                <option value="9">LIMMSE</option>
-                <option value="5">MODIFIED_AHD</option>
-                <option value="2">PPG</option>
-                <option value="7">VCD</option>
-                <option value="8">VCD_MODIFIED_AHD</option>
-                <option value="1">VNG</option>
-              </select>
-            </fieldset>
-            <br>
-            <p>FBDD noise reduction:</p>
-            <fieldset>
-              <select name="fbddNoiseReduction" id="fbddNoiseReduction">
-                <option value="2">Full</option>
-                <option value="1">Light</option>
-                <option value="0" selected>Off</option>
-              </select>
-            </fieldset>
-            <br>
-            <p>DCB Enhance:</p>
-            <fieldset id="dcbEnhance">
-              <input type="radio" value="True" name="dcbEnhance">
-              <label for="dcbEnhance">True</label>
-              <input type="radio" value="False" name="dcbEnhance" checked>
-              <label for="dcbEnhance">False</label>
-            </fieldset>
-            <br>
-            <p>DCB correction passes:</p>
-            <fieldset id="dcbIterations">
-              <input type="text" name="dcbIterations" value="0" placeholder="0" class="mytext">
-            </fieldset>
-            <br>
-            <p>Half Size:</p>
-            <fieldset id="halfSize">
-              <input type="radio" value="True" name="halfSize">
-              <label for="halfSize">True</label>
-              <input type="radio" value="False" name="halfSize" checked>
-              <label for="halfSize">False</label>
-            </fieldset>
-            <br>
-            <p>Median Filter passes:</p>
-            <fieldset id="medianFilter">
-              <input type="text" name="medianFilter" value="0" placeholder="0" class="mytext">
-            </fieldset>
-            <br>
-            <p>Chromatic Aberration:</p>
-            <fieldset>
-              <input type="text" id="redScale" name="redScale" value="1" placeholder="1" class="mytext">
-              <input type="text" id="blueScale" name="blueScale" value="1" placeholder="1" class="mytext">
-            </fieldset>
-            <br>
-            <p>Saturation adjustment:</p>
-            <fieldset id="saturation">
-              <input type="text" name="saturation" value="0" placeholder="0" class="mytext">
-            </fieldset>
-            <br>
-            <p>Highlight Mode:</p>
-            <fieldset>
-              <select name="highlight" id="highlight">
-                <option value="2">Blend</option>
-                <option value="0">Clip</option>
-                <option value="1">Ignore</option>
-                <option value="5" selected>Default</option>
-              </select>
-            </fieldset> 
-          </div>
-          <div class="flex-item-4">
-            <p>Astronomical object photographed:</p>
-            <fieldset>
-              <select name="object" id="object">
-                <option value="Star_Clusters">Star Clusters</option>
-                <option value="Nebulae">Nebulae</option>
-                <option value="Galaxies">Galaxies</option>
-                <option value="Comet">Comet</option>
-                <option value="Planet">Planet</option>
-                <option value="Moon">Moon</option>
-                <option value="Star">Star</option>
-              </select>
-            </fieldset> 
-            <br>
-            <p>Choose an album:</p>
-              <div class="row">
-                <fieldset id="album">
-                  <% if(folders){ %>
-                    <% for(var folder of folders) { %>
-                      <div class="col-sm card card-body m-3  col-md-2">
-                        <input type="radio" value="<%=folder%>" name="album">     
-                        <label for="album"><%= folder %></label>
-                      </div>                   
-                    <% } %>     
-                  <% }else { %>
-                    <p class="card card-body text-center display-4 my-4" style="color:aliceblue">No album</p>
-                  <% } %>
-                </fieldset>
-              </div>
-            <button type="submit" onclick="hideElement()">Process</button>
-          </div> 
-        </div>
-      </form>
-      <div class="demo-container">
-        <h5>Please Wait...</h5>
-        <div class="progress-bar">
-          <div class="progress-bar-value"></div>
-        </div>
-      </div>
+            <button type="submit">Next</button>
+        </form>
+    </div> 
     </p>
   </section>
   
   <script src="../javascripts/left_bar.js"></script>
-  <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-  <script>
-    $('input[name="baseFrame"]').click(function(e) {
-      if(e.target.value === 'True') {
-        $('#baseName').show();
-      } else {
-        $('#baseName').hide();
-      }
-    })
-    $('#baseName').hide();
-  </script>
-  <script>
-    $('input[name="darkFrame"]').click(function(e) {
-      if(e.target.value === 'True') {
-        $('#darkName').show();
-      } else {
-        $('#darkName').hide();
-      }
-    })
-    $('#darkName').hide();
-  </script>
-  <script>
-    $('input[name="flatFrame"]').click(function(e) {
-      if(e.target.value === 'True') {
-        $('#flatName').show();
-      } else {
-        $('#flatName').hide();
-      }
-    })
-    $('#flatName').hide();
-  </script>
-  <script>
-    $('input[name="maskFrame"]').click(function(e) {
-      if(e.target.value === 'True') {
-        $('#maskName').show();
-      } else {
-        $('#maskName').hide();
-      }
-    })
-    $('#maskName').hide();
-  </script>
-  <script>
-    function hideElement() {
-      element = document.querySelector('.flex-container');
-      element.style.visibility = 'hidden';
-      element = document.querySelector('.demo-container');
-      element.style.visibility = 'visible';
-    }
-  </script>
- </body>
+  
+</body>
 </html>
