--- a/views/processed.ejs
+++ b/views/processed.ejs
@@ -57,6 +57,20 @@
       </a>
       <span class="tooltip">Manual Process</span>
      </li>
+     <li>
+      <a href="/histogram">
+        <i class='bx bx-line-chart-down'></i>
+        <span class="links_name">Histogram</span>
+      </a>
+      <span class="tooltip">Histogram</span>
+     </li>
+     <li>
+      <a href="/paint">
+        <i class='bx bx-paint'></i>
+        <span class="links_name">Edit Image</span>
+      </a>
+      <span class="tooltip">Edit Image</span>
+     </li>
      <li class="profile">
          <div class="profile-details">
             <div class="name_job">
