--- a/views/about.ejs
+++ b/views/about.ejs
@@ -13,21 +13,23 @@
     <nav>
         <div class="menu">
             <div class="logo">
-                <a href="/">Luna: AstroTools</a>
+                <a href="/">Luna AstroTools</a>
             </div>
             <ul>
                 <li><a href="/login">Log In</a></li>
                 <li><a href="/users">Sign Up</a></li>
                 <li><a href="/about">About</a></li>
                 <li><a href="/faq">FAQ</a></li>
-                <li><a href="/feedback">Feedback</a></li>
             </ul>
         </div>
     </nav>
     <div class="img"></div>
     <div class="center">
-        <div class="title">knaisn[aiosnd[bknas[dlbnas</div>
-        <div class="sub_title">kdnwpinvoisndvonaskvnasjn askdvnasjkdvnapjks dv skndvaplsnaplskn asdlkna[slkbna[slkbna asknba[lsknb[alsnb asblkna[lsbkn</div>
+        <div class="title">What is Luna AstroTools?</div>
+        <div class="sub_title">
+            Luna AstroTools is an online platform developed by Alexandre Gil Lujan as a final course completion project for the Faculty of Computer Engineering at the Pontifical Catholic University of Campinas, Brazil.
+            The platform was developed with the objective of helping amateur astrophotographers in the processing of astronomical photos, having resources for beginners and experts in the field. It is completely free and copyright-free.
+        </div>
     </div>
 </body>
 
