--- a/views/faq.ejs
+++ b/views/faq.ejs
@@ -13,14 +13,13 @@
   <nav>
     <div class="menu">
         <div class="logo">
-          <a href="/">Luna: AstroTools</a>
+          <a href="/">Luna AstroTools</a>
         </div>
         <ul>
             <li><a href="/login">Log In</a></li>
             <li><a href="/users">Sign Up</a></li>
             <li><a href="/about">About</a></li>
             <li><a href="/faq">FAQ</a></li>
-            <li><a href="/feedback">Feedback</a></li>
         </ul>
     </div>
   </nav>
@@ -28,49 +27,49 @@
   <div class="set">
     <div class="accordion">
       <div class="image-box">
-        <!--<img src="images/mainImg.png" alt="Accordion Image">-->
+        <img src="../images/image-2.jpeg">
       </div>
       <div class="accordion-text">
         <div class="title">FAQ</div>
       <ul class="faq-text">
         <li>
           <div class="question-arrow">
-            <span class="question">What do you mean by HTML & CSS?</span>
+            <span class="question">What image formats are supported when processing photos?</span>
             <i class="bx bxs-chevron-down arrow"></i>
           </div>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum, doloribus.</p>
+          <p>Luna AstroTools only supports RAW formats and their extensions, such as: ".cr2", ".nef", ".arf", among others. </p>
           <span class="line"></span>
         </li>
         <li>
           <div class="question-arrow">
-            <span class="question">What do you mean by JavaScript?</span>
+            <span class="question">How many photos can I upload to the platform at once?</span>
             <i class="bx bxs-chevron-down arrow"></i>
           </div>
-          <p>JavaScript is a text-based programming language used both on the client-side and server-side that allows you to make web pages interactive</p>
+          <p>You can upload up to 10 photos at a time to an existing or new album. There are no limits on how many uploads can be made.</p>
           <span class="line"></span>
         </li>
         <li>
           <div class="question-arrow">
-            <span class="question">From where you learned HTML & CSS?</span>
+            <span class="question">What kind of algorithm is used to process astronomical photos?</span>
             <i class="bx bxs-chevron-down arrow"></i>
           </div>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Non, necessitatibus.</p>
+          <p>Luna AstroTools uses OpenCV and RawPy to pre-process and stack selected photographs, returning a good quality image to the user.</p>
           <span class="line"></span>
         </li>
         <li>
           <div class="question-arrow">
-            <span class="question">Which code editor do you use?</span>
+            <span class="question">What is the automatic process?</span>
             <i class="bx bxs-chevron-down arrow"></i>
           </div>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum, labore.</p>
+          <p>The automatic process is intended for less experienced users who don't want to spend a lot of time setting up the processing. The platform will automatically configure the process according to the selected photos. The quality may not be the best when compared to the manual process done correctly. There are no limits on how many process can be made</p>
           <span class="line"></span>
         </li>
         <li>
           <div class="question-arrow">
-            <span class="question">Software you use for video editing?</span>
+            <span class="question">What is the manual process?</span>
             <i class="bx bxs-chevron-down arrow"></i>
           </div>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe, repudiandae!</p>
+          <p>The manual process is intended for more experienced users who want to configure the processing. At the end of the process, a preview will be returned, which can be discarded or saved in the repository. The quality of the final image can vary according to the photos used and the parameters chosen for the process. There are no limits on how many process can be made</p>
           <span class="line"></span>
         </li>
       </ul>
