--- a/views/m-next.ejs
+++ b/views/m-next.ejs
@@ -11,7 +11,7 @@
 <body>
   <div class="sidebar">
     <div class="logo-details">
-      <div class="logo_name">Luna: AstroTools</div>
+      <div class="logo_name">Luna AstroTools</div>
       <i class='bx bxs-moon' id="btn" ></i>
     </div>
     <ul class="nav-list">
@@ -65,7 +65,7 @@
       <span class="tooltip">Histogram</span>
      </li>
      <li>
-      <a href="/paint">
+      <a href="/image-editor">
         <i class='bx bx-paint'></i>
         <span class="links_name">Edit Image</span>
       </a>
@@ -367,7 +367,7 @@
           </div>
           <div class="flex-item-4">
            
-            </div>
+          </div>
             <button type="submit" onclick="hideElement()">Process</button>
           </div> 
         </div>
