--- a/views/login.ejs
+++ b/views/login.ejs
@@ -13,14 +13,13 @@
     <nav>
       <div class="menu">
         <div class="logo">
-          <a href="/">Luna: AstroTools</a>
+          <a href="/">Luna AstroTools</a>
         </div>
         <ul>
           <li><a href="/login">Log In</a></li>
           <li><a href="/users">Sign Up</a></li>
           <li><a href="/about">About</a></li>
           <li><a href="/faq">FAQ</a></li>
-          <li><a href="/feedback">Feedback</a></li>
         </ul>
       </div>
     </nav>
@@ -53,8 +52,6 @@
           </p>
         <%}%>
           <p>
-            <a href="#" style="color:aliceblue">Forgot password?</a> 
-            <a style="color:aliceblue"> | </a> 
             <a href="/users" style="color:aliceblue">New here? Sign Up!</a>
           </p>
       </div>
