--- a/views/get-histogram.ejs
+++ b/views/get-histogram.ejs
@@ -88,7 +88,11 @@
   </div>
   <section class="home-section">
       <div class="text">Histogram</div>
-      <img src="http://localhost:3000/previews/generated_histogram/<%=userId%>.png">
+      <div class="flex-container">
+        <div class="flex-item">
+          <img src="http://localhost:3000/previews/generated_histogram/<%=userId%>.png">
+        </div>
+      </div>
   </section>
 
   <script src="http://localhost:3000/javascripts/left_bar.js"></script>
