--- a/views/image-editor.ejs
+++ b/views/image-editor.ejs
@@ -3,7 +3,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="UTF-8">
-    <title>Histogram</title>
+    <title>Image Editor</title>
     <link rel="stylesheet" href="../stylesheets/histogram.css">
     <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -90,7 +90,7 @@
     <div class="text">Image Editor</div>
     <p>
     <div class="drop-area" id="drop">
-        <form action="/image-editor/get-tui" method="POST">
+        <form target="_blank" action="/image-editor/get-tui" method="POST">
             <br>
             <p>Please select the photo:</p>
             <fieldset>
