--- a/views/m-process.ejs
+++ b/views/m-process.ejs
@@ -108,13 +108,13 @@
             <p>Please select the astronomical object photographed:</p>
             <fieldset>
                 <select name="category" id="category">
-                    <option value="star_clusters">Star Clusters</option>
-                    <option value="nebulae">Nebulae</option>
-                    <option value="galaxies">Galaxies</option>
-                    <option value="comet">Comet</option>
-                    <option value="planet">Planet</option>
-                    <option value="moon">Moon</option>
-                    <option value="star">Star</option>
+                    <option value="Star_Clusters">Star Clusters</option>
+                    <option value="Nebulae">Nebulae</option>
+                    <option value="Galaxies">Galaxies</option>
+                    <option value="Comet">Comet</option>
+                    <option value="Planet">Planet</option>
+                    <option value="Moon">Moon</option>
+                    <option value="Star">Star</option>
                 </select>
             </fieldset> 
             <br>
