--- a/views/a-next.ejs
+++ b/views/a-next.ejs
@@ -193,7 +193,7 @@
               </select>
             </fieldset>  
             <br>
-            <button type="submit">Process</button>
+            <button type="submit" onclick="hideElement()">Process</button>
           </div> 
         </div>
       </form>
